--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(QtWidget VERSION 0.1 LANGUAGES CXX)
+project(RFLogger VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -21,40 +21,42 @@ set(PROJECT_SOURCES
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(QtWidget
+    qt_add_executable(RFLogger
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         rfreader.h rfreader.cpp
+        serialcomm.h serialcomm.cpp
+
 
     )
 # Define target properties for Android with Qt 6 as:
-#    set_property(TARGET QtWidget APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
+#    set_property(TARGET RFLogger APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
 #                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
 # For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
 else()
     if(ANDROID)
-        add_library(QtWidget SHARED
+        add_library(RFLogger SHARED
             ${PROJECT_SOURCES}
         )
 # Define properties for Android with Qt 5 after find_package() calls as:
 #    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
     else()
-        add_executable(QtWidget
+        add_executable(RFLogger
             ${PROJECT_SOURCES}
         )
     endif()
 endif()
 
-target_link_libraries(QtWidget PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
-target_link_libraries(QtWidget PRIVATE Qt6::SerialPort)
+target_link_libraries(RFLogger PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(RFLogger PRIVATE Qt6::SerialPort)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
 # explicit, fixed bundle identifier manually though.
 if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.QtWidget)
+  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.RFLogger)
 endif()
-set_target_properties(QtWidget PROPERTIES
+set_target_properties(RFLogger PROPERTIES
     ${BUNDLE_ID_OPTION}
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
@@ -63,12 +65,12 @@ set_target_properties(QtWidget PROPERTIES
 )
 
 include(GNUInstallDirs)
-install(TARGETS QtWidget
+install(TARGETS RFLogger
     BUNDLE DESTINATION .
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(QtWidget)
+    qt_finalize_executable(RFLogger)
 endif()
